@@ -6,6 +6,7 @@ o added additional box lines to function 'ramachandran()' for 'plotType = "comic
 o added 'barScaleFactor' to function 'dssp_ts()' to account for the possibility that very small peptides might be plotted
 o added GROMACS support for functions: 'load_dssp()', 'load_dssp_ts()'
 o added function 'load_XPM()' to load "X PixMap" data as commonly produced by GROMACS
+o added functions 'find_Nth_occurrence()' and 'split_GROMACS_atomnames()' to the collection of helper functions
 ------------------------
 
 Version: 0.3.1
